# unicode_blocks

./: .gitignore  pyproject.toml
src/unicode_blocks/: blocks.py
