[tool.poetry]
name = "unicode-blocks"
version = "0.1.0"
description = ""
authors = ["gewalt01 <gewalt01@github.com>"]
readme = "README.md"
packages = [{include = "unicode_blocks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
